packages/beff-core/tests/snapshots/report_error__tests__fail_typeof_import.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 5 │                 post: (_c: Ctx, a: typeof import("./data_const")): typeof import("./data_const") => a,
   │                                           ───────────┬──────────  
   │                                                      ╰──────────── typeof import is not supported
───╯

Error: ~~~
   ╭─[<unknown>:1:1]
   │
 5 │                 post: (_c: Ctx, a: typeof import("./data_const")): typeof import("./data_const") => a,
   │                                                                           ───────────┬──────────  
   │                                                                                      ╰──────────── typeof import is not supported
───╯

