packages/beff-core/tests/snapshots/report_error__tests__fail_typeof_keyof_access.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 6 │             get: (): (typeof a1)['b'] => impl()
   │                                  ─┬─  
   │                                   ╰─── Invalid indexed access
───╯

Error: ~~~
   ╭─[<unknown>:1:1]
   │
 9 │             get: (): (typeof a2)['b'] => impl()
   │                                  ─┬─  
   │                                   ╰─── Invalid indexed access
───╯

